<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

    <shortcut
        android:shortcutId="shortcut_next_wallpaper"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_next_short"
        android:shortcutLongLabel="@string/shortcut_next_long">
        <intent
            android:action="com.chrisalvis.rotato.action.NEXT"
            android:targetPackage="com.chrisalvis.rotato"
            android:targetClass="com.chrisalvis.rotato.worker.AutomationActivity" />
    </shortcut>

    <shortcut
        android:shortcutId="shortcut_save_wallpaper"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_save_short"
        android:shortcutLongLabel="@string/shortcut_save_long">
        <intent
            android:action="com.chrisalvis.rotato.action.SAVE"
            android:targetPackage="com.chrisalvis.rotato"
            android:targetClass="com.chrisalvis.rotato.worker.AutomationActivity" />
    </shortcut>

    <shortcut
        android:shortcutId="shortcut_discover"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_discover_short"
        android:shortcutLongLabel="@string/shortcut_discover_long">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="com.chrisalvis.rotato"
            android:targetClass="com.chrisalvis.rotato.MainActivity">
            <extra android:name="navigate_to" android:value="discover" />
        </intent>
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="shortcut_library"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_library_short"
        android:shortcutLongLabel="@string/shortcut_library_long">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="com.chrisalvis.rotato"
            android:targetClass="com.chrisalvis.rotato.MainActivity">
            <extra android:name="navigate_to" android:value="home" />
        </intent>
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="shortcut_collections"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_collections_short"
        android:shortcutLongLabel="@string/shortcut_collections_long">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="com.chrisalvis.rotato"
            android:targetClass="com.chrisalvis.rotato.MainActivity">
            <extra android:name="navigate_to" android:value="browse" />
        </intent>
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <shortcut
        android:shortcutId="shortcut_settings"
        android:enabled="true"
        android:icon="@mipmap/ic_launcher"
        android:shortcutShortLabel="@string/shortcut_settings_short"
        android:shortcutLongLabel="@string/shortcut_settings_long">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="com.chrisalvis.rotato"
            android:targetClass="com.chrisalvis.rotato.MainActivity">
            <extra android:name="navigate_to" android:value="settings" />
        </intent>
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

</shortcuts>
